--- a/package.json
+++ b/package.json
@@ -14,20 +14,28 @@
     "jsxBracketSameLine": true,
     "semi": false,
     "singleQuote": true
-  },  
+  },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-community/datetimepicker": "^5.1.0",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-chart-kit": "^6.11.0",
+    "react-native-dropdown-picker": "^5.3.0",
     "react-native-intl-phone-input": "^1.2.27",
     "react-native-modal-dropdown": "^1.0.2",
+    "react-native-pager-view": "^5.4.9",
     "react-native-phone-input": "^1.3.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
+    "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
